# HESA_Compliance

./: 22056_1_10_0.xsd  Quality Failures - Magnus edit.xlsx  QualityRuleReport.de8d9c35-ef32-4264-83bd-6d877fb7f265.outside.2023-12-01T01_26_46.707Z.csv  README.md  Student Data HESA 01 Dec 0030.xlsx  Student Data HESA 03 Dec 1230.xlsx  Student_Data_HESA_12_30.csv  csv_to_xml_final_version.ipynb  excel_parquet.ipynb  pyproject.toml  template.xml
