[tool.poetry]
name = "csv-to-xml"
version = "0.1.0"
description = ""
authors = ["Vallabha Systems Limited"]
license = "MIT"
readme = "README.md"
packages = [{include = "csv_to_xml"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.3"
lxml = "^4.9.3"
openpyxl = "^3.1.2"
pyarrow = "^14.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
